2002-10-13  Markus Germeier  <mager@tzi.de>

	* mpiosh/callback.c (mpiosh_cmd_dump): fixed compile and
	  logic error due to now "missing" mpiosh_cmd_get

2002-10-13  Andreas Buesching  <crunchy@tzi.de>

	* mpiosh/callback.c: removed the callback functions of get, put
	and del. This work is done by mget, mput and mdel now.

	* mpiosh/readline.c (mpiosh_readline_comp_mpio_file): fixed a
	crash which ocurrs when there is no connection to the player
	opened. Also stop readline from using default filename completion
	in the case of not returning any results.

2002-10-13  Markus Germeier  <mager@tzi.de>

	* all operations on external memory should work now!
	* libmpio/ecc.c (mpio_ecc_256_check): 
	  1 Bit errors are now automagically corrected
	
2002-10-13  Markus Germeier  <mager@tzi.de>

	* libmpio/mpio.c (mpio_init): fixed segv when external memory
	  was selected
	* formatting of external memory is now completly supported 
	  (untested ATM)

2002-10-12  Andreas Buesching  <crunchy@tzi.de>

	* configure.in: changed version to 0.6.0 for the next release;
	add check for a usable path to the kernel header files

	* mpiosh/global.c (commands): removed commands 'put', 'get', 'del'
	and 'exit' and add these to the alias lists of 'mput', 'mget',
	'mdel' and 'quit'. Also add some more aliases to some other
	commands

	* mpiosh/readline.c (mpiosh_readline_comp_cmd): add aliases to
	completion list

	* mpiosh/global.c (commands): use command completion for 'help'
	arguments

	* mpiosh/global.h: add alias list to command struct

	* mpiosh/global.c: new file containing global symbols as the
	command list

	* mpiosh/callback.c: fix compiler warnings

	* libmpio/mpio.c (mpio_memory_format): fixed compiler warning

	* mpiosh/readline.c: new file containing all stuff around the
	readline library
	(mpiosh_readline_comp_mpio_file): doing completion on files of the
	current mpio memory card
	(mpiosh_readline_init): inserted bug fix for the completion
	quoting from Mathieu
