@@ -1,3 +1,8 @@
+2002-10-18  Markus Germeier  <mager@tzi.de>
+
+	* libmpio/directory.c (mpio_dentry_get_real): 
+	  another fix for the 8.3 handling needed for the config file
+
 2002-10-13  Markus Germeier  <mager@tzi.de>
 
 	* mpiosh/callback.c (mpiosh_cmd_dump): fixed compile and
